<resources>
    <string name="app_name">İnsülin Hesabı</string>

    // menü başlıkları
    <string name="klavuz">Kullanım klavuzu</string>
    <string name="bolus_doz">Bolus Doz Hesabı</string>
    <string name="infuzyon_dozu">Infuzyonda Doz Hesabı</string>

    // InfuzyonDozu başlığı
    <string name="infuzyon_dozu_baslik">4x1 Kan Şekeri Takibi İçin İnsülin Doz Hesabı</string>

    <string name="simdikiKS">Şu anki kan şekeri</string>
    <string name="oncekiKS">Önceki kan şekeri</string>
    <string name="sure">İki ölçüm arasındaki saat farkı</string>

    <string name="dopamin">Dopamin infüzyonu alıyor</string>
    <string name="steroid">Prednol/Dekort alıyor</string>
    <string name="enfeksiyon">Enfeksiyonu ve ateşi var</string>

    <string name="hesapla">İnsülin dozunu hesapla</string>

    //Klavuz başlığı
    <string name="klavuz_baslik">Kullanım Klavuzu</string>

    //Klavuz tablosu
    <string name="kullanim_aciklamasi">Bu programdaki hesaplar kabaca aşağıdaki tabloya göre yapılmıştır.\nFakat hastaların boy, kilo, cinsiyet ve hastalıklarına göre modifiye edilmiştir.\n\nBu değişiklikler sonucunda, bu programdaki tüm hesaplamalar 4 ila 6 saat aralıklarla yapılan kan şekeri ölçümlerine dayanmaktadır.\n\nHerhangi bir nedenle 1 ila 3 saat gibi kısa aralıklarla ölçülen kan şekerine göre doz hesaplaması yapılırsa hastada hipoglisemi gelişmesi kaçınılmaz olacaktır.\n\nBu nedenle, bu programda önerilen insülin dozları, sadece YBÜ\'ne yatmadan önce de insülin iğnesi kullandığı bilinen hastalara 6x1 kan şekeri takibi uygulanması, diğer tüm hastalara 4x1 kan şekeri takibi uygulanması halinde geçerli olabilecektir.</string>
    <string name="baslik1">Kan şekeri\n(mg/dl)</string>
    <string name="baslik2">Bolus insülin\ndozu (IU)</string>
    <string name="baslik3">İnfüzyon dozu\n(ml/saat)</string>

    <string name="satir1sutun1">117–143</string>
    <string name="satir1sutun2">0</string>
    <string name="satir1sutun3">1</string>

    <string name="satir2sutun1">144–179</string>
    <string name="satir2sutun2">5</string>
    <string name="satir2sutun3">1</string>

    <string name="satir3sutun1">180–233</string>
    <string name="satir3sutun2">7</string>
    <string name="satir3sutun3">2</string>

    <string name="satir4sutun1">234–287</string>
    <string name="satir4sutun2">10</string>
    <string name="satir4sutun3">3</string>

    <string name="satir5sutun1">288–359</string>
    <string name="satir5sutun2">13</string>
    <string name="satir5sutun3">4</string>

    <string name="satir6sutun1">>360</string>
    <string name="satir6sutun2">15</string>
    <string name="satir6sutun3">5</string>

    <string name="klavuz_tablosu_baslik">İnsülin İnfüzyonu Başlangıç Şeması</string>
    <string name="title_activity_klavuz">Klavuz</string>
    <string name="title_activity_bolus_doz">BolusDoz</string>

    //Bolus doz başlığı
    <string name="bolus_doz_baslik">Bolus İnsülin Dozu Hesabı</string>

    <string name="boy">Hastanın boyu (Örnek: 167)</string>
    <string name="kilo">Hastanın kilosu (Örnek: 98)</string>
    <string name="cinsiyet">Cinsiyet</string>
    <string name="kadin">Kadın</string>
    <string name="erkek">Erkek</string>

    //Tedavi baslangici başlığı
    <string name="tedavi_baslangici">Yeni Yatan Hastada Tedavi Başlangıcı</string>

    <string name="title_activity_tedavi_baslangici">YBÜ\'ne Yeni Yatırılan Hastada Tedavi Başlangıcı</string>
    <string name="tip_1_dm">İnsülin kullanan hasta</string>
    <string name="tip_2_dm">Şeker hapı kullanan hasta</string>
    <string name="dm_yok">Diabet öyküsü yok</string>

    <string name="travma">Travma</string>
    <string name="travma_yok">Travma yok</string>
    <string name="travma_var">Travma hastası</string>
</resources>
