<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.agrimerkezi.ybuglukoztakibi.TedaviBaslangici">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:text="@string/title_activity_tedavi_baslangici"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:singleLine="false"
            android:background="@drawable/border"
            android:id="@+id/baslik"
            android:layout_marginBottom="15dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:hint="@string/simdikiKS"
            android:id="@+id/simdikiKS"
            android:layout_below="@+id/baslik"
            android:layout_marginBottom="15dp"
            android:inputType="number" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:hint="@string/boy"
            android:id="@+id/boy"
            android:layout_below="@+id/simdikiKS"
            android:layout_marginBottom="15dp"
            android:inputType="number" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:hint="@string/kilo"
            android:id="@+id/kilo"
            android:layout_below="@+id/boy"
            android:inputType="number" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cinsiyet"
            android:id="@+id/cinsiyet"
            android:textOn="@string/kadin"
            android:textOff="@string/erkek"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/kilo" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/travma"
            android:id="@+id/travma"
            android:textOn="@string/travma_yok"
            android:textOff="@string/travma_var"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/cinsiyet" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/diabet_oykusu"
            android:layout_below="@+id/travma">

            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/tip_1_dm"
                android:text="@string/tip_1_dm"
                android:layout_marginTop="15dp" />

            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/tip_2_dm"
                android:text="@string/tip_2_dm"
                android:layout_marginTop="15dp" />

            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/dm_yok"
                android:text="@string/dm_yok"
                android:layout_marginTop="15dp" />

        </RadioGroup>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/hesapla"
            android:id="@+id/tus"
            android:onClick="tedaviyiBelirle"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/diabet_oykusu" />

    </RelativeLayout>
</ScrollView>
