<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.agrimerkezi.ybuglukoztakibi.BolusDoz">

        <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:text="@string/bolus_doz_baslik"
            android:textSize="30dp"
            android:textStyle="bold"
            android:gravity="center"
            android:singleLine="false"
            android:background="@drawable/border"
            android:id="@+id/baslik"
            android:layout_marginBottom="15dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:hint="@string/simdikiKS"
            android:id="@+id/simdikiKS"
            android:layout_below="@+id/baslik"
            android:layout_marginBottom="15dp"
            android:inputType="number" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:hint="@string/boy"
            android:id="@+id/boy"
            android:layout_below="@+id/simdikiKS"
            android:layout_marginBottom="15dp"
            android:inputType="number" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:hint="@string/kilo"
            android:id="@+id/kilo"
            android:layout_below="@+id/boy"
            android:inputType="number" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cinsiyet"
            android:id="@+id/cinsiyet"
            android:textOn="@string/kadin"
            android:textOff="@string/erkek"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/kilo" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/hesapla"
            android:id="@+id/tus"
            android:onClick="bolusDozHesapla"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/cinsiyet" />

    </RelativeLayout>
</ScrollView>