<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".AnaEkran">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:text="@string/infuzyon_dozu_baslik"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:singleLine="false"
            android:background="@drawable/border"
            android:id="@+id/baslik"
            android:layout_marginBottom="15dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="@string/simdikiKS"
            android:id="@+id/simdikiKS"
            android:layout_below="@+id/baslik"
            android:layout_marginBottom="15dp"
            android:inputType="number" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="@string/oncekiKS"
            android:id="@+id/oncekiKS"
            android:layout_below="@+id/simdikiKS"
            android:inputType="number" />

        <CheckBox android:id="@+id/dopamin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dopamin"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/oncekiKS"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <CheckBox android:id="@+id/steroid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/steroid"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/dopamin"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <CheckBox android:id="@+id/enfeksiyon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enfeksiyon"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/steroid"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/hesapla"
            android:id="@+id/tus"
            android:onClick="altiSaatlikDozHesapla"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/enfeksiyon" />

    </RelativeLayout>
</ScrollView>